--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <header><h1>Landing Page</h1></header>
-        <section>
+        <section class="container-home">
             <figure class="conatiner-avatar">
                 <img src="./image/michael.jpg" alt="avatar">
             </figure>
