--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <div class="icon-social-media">
                 <a href="http://www.linkedin.com/in/michaelgaleano" target="_blank"><img src="./image/linkedin.png" alt="linkedin"></a>
                 <a href="https://github.com/mikygaleano" target="_blank"><img src="./image/signo-de-github.png" alt="github"></a>
-                <a href="/" target="_blank"><img src="./image/twitter.png" alt="twitter"></a>
-                <a href="https://www.instagram.com/maikiidev" target="_blank"><img src="./image/instagram.png" alt="instagram"></a>
+                <a href="https://www.twitter.com/maikiidev" target="_blank"><img src="./image/twitter.png" alt="twitter"></a>
+                <a href="https://www.instagram.com/maikidev" target="_blank"><img src="./image/instagram.png" alt="instagram"></a>
             </div>
         </section>
     </main>
